<resources>
    <string name="app_name">Rock Paper Scissor</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play_again">Play Again</string>
    <string name="high_score_0">High Score = 0</string>
    <string name="name">Name</string>
    <string name="points">Points</string>
    <string name="_1_you">1 . You</string>
    <string name="textview">TextView</string>
    <string name="_2_computer">2 . Computer</string>
    <string name="total_wins_0">Total Wins = 0</string>
    <string name="textview">TextView</string>
    <string name="total_loses_0">Total Loses =0</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="rock_paper_scissor">Rock Paper Scissor</string>
    <string name="you">You</string>
    <string name="vs_computer">VS Computer</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="computer">Computer</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>